<resources>
    <string name="app_name">Movie Catalogue</string>
    <string name="movie">Movie</string>
    <string name="tv_show">TV Show</string>
    <string name="favorite">Favorite</string>
    <string name="movie_details">Movie Details</string>
    <string name="tv_show_details">TV Show Details</string>
    <string name="sample_release_date">01–01–2021</string>
    <string name="sample_title">The Movie: Very Long Movie Title</string>
    <string name="sample_category">Adventure, Action, Sci-Fi, Science Fiction</string>
    <string name="sample_ratings">10.0</string>
    <string name="category">Category</string>
    <string name="release_date">Release Date</string>
    <string name="duration">Duration</string>
    <string name="sample_duration">1h 30m</string>
    <string name="overview">Overview</string>
    <string name="image_poster">Image Poster</string>
    <string name="movies_empty">Movies data is empty</string>
    <string name="tv_show_empty">TV Shows data is empty</string>
    <string name="null_placeholder">N/A</string>
    <string name="menu_newest">Newest</string>
    <string name="menu_oldest">Oldest</string>
    <string name="menu_ratings">Ratings</string>
    <string name="error">Terjadi kesalahan</string>

</resources>