<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.DetailActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.MovieCatalogue.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/Theme.MovieCatalogue.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="12dp">

            <ImageView
                android:id="@+id/imgPoster"
                android:layout_width="150dp"
                android:layout_height="220dp"
                android:contentDescription="@string/image_poster"
                android:src="@color/teal_200"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:ellipsize="end"
                android:fontFamily="sans-serif-condensed"
                android:maxLines="2"
                android:textAllCaps="true"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imgPoster"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/sample_title" />

            <TextView
                android:id="@+id/tvRatings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:drawablePadding="4dp"
                android:gravity="center_vertical"
                android:hint="@string/null_placeholder"
                android:textSize="14sp"
                android:textStyle="bold"
                app:drawableStartCompat="@drawable/ic_star_rate"
                app:layout_constraintStart_toEndOf="@+id/imgPoster"
                app:layout_constraintTop_toBottomOf="@id/tvTitle"
                tools:text="@string/sample_ratings" />

            <TextView
                android:id="@+id/tvCategoryTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/category"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/imgPoster"
                app:layout_constraintTop_toBottomOf="@+id/tvRatings" />

            <TextView
                android:id="@+id/tvCategory"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:ellipsize="end"
                android:hint="@string/null_placeholder"
                android:maxLines="2"
                android:textSize="14sp"
                android:textStyle="italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/imgPoster"
                app:layout_constraintTop_toBottomOf="@+id/tvCategoryTitle"
                tools:text="@string/sample_category" />

            <TextView
                android:id="@+id/tvReleaseDateTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/release_date"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/imgPoster"
                app:layout_constraintTop_toBottomOf="@+id/tvCategory" />

            <TextView
                android:id="@+id/tvReleaseDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:hint="@string/null_placeholder"
                android:textSize="14sp"
                app:layout_constraintStart_toEndOf="@id/imgPoster"
                app:layout_constraintTop_toBottomOf="@+id/tvReleaseDateTitle"
                tools:text="@string/sample_release_date" />

            <TextView
                android:id="@+id/tvDurationTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/duration"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/imgPoster"
                app:layout_constraintTop_toBottomOf="@+id/tvReleaseDate" />

            <TextView
                android:id="@+id/tvDuration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:hint="@string/null_placeholder"
                android:textSize="14sp"
                app:layout_constraintStart_toEndOf="@id/imgPoster"
                app:layout_constraintTop_toBottomOf="@+id/tvDurationTitle"
                tools:text="@string/sample_duration" />

            <TextView
                android:id="@+id/tvOverviewTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/overview"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imgPoster" />

            <TextView
                android:id="@+id/tvOverview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/null_placeholder"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvOverviewTitle"
                tools:maxLines="5"
                tools:text="@tools:sample/lorem/random" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabFavorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="32dp"
        android:contentDescription="@string/favorite"
        tools:src="@drawable/ic_favorite_border" />


    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        tools:visibility="visible" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>